--- a/ProyectoFinalAnalisis_alejo/src/interfaz/InterfazPrincipal.form
+++ b/ProyectoFinalAnalisis_alejo/src/interfaz/InterfazPrincipal.form
@@ -188,6 +188,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lblGenerando">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tw Cen MT Condensed" size="18" style="0"/>
+            </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
           <Constraints>
