--- a/ProyectoFinalAnalisis_alejo/src/interfaz/InterfazReproducir.form
+++ b/ProyectoFinalAnalisis_alejo/src/interfaz/InterfazReproducir.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -50,6 +51,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="txtCancionGenerada">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tw Cen MT Condensed" size="18" style="0"/>
@@ -242,6 +244,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="txtVectorProbabilidades">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tw Cen MT Condensed" size="18" style="0"/>
@@ -259,7 +262,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="0" y="0" width="780" height="580"/>
+              <AbsoluteConstraints x="0" y="0" width="780" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
